src/styles.css
* {
	box-sizing: border-box;
}

body {
	font-family: sans-serif;
	overflow-y: scroll;
}

:root {
	--color-primary: #1d9222;
	--grid-maxWidth: 100rem;
	/* --color-secondary: #9e3f00; */
	--page-padding: 3rem;
	/* --footer-padding: var(--page-padding); */
	--footer-padding: 2rem;
}

a[href]:hover {
	opacity: initial;
}

button.swap {
	padding-block: 0.8rem;
}

main.container {
	margin-block: var(--page-padding);
}

details summary {
	cursor: pointer;
}

p {
	margin-block-start: revert;
}

pre {
	tab-size: 4;

	background: #eee8;
	padding: 1em 1.5em;
	border-radius: 5px;
}

a {
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

nav a:hover {
	text-decoration: initial;
}

.y-margins {
	margin: 1em auto;
}

.top-level-li {
	margin: 1em 0;
}

.popover {
	position: absolute;
	max-width: min(500px, calc(100vw - 16px));
	background: white;
	border: 1px solid #aaa;
	border-radius: 5px;
	padding: 0.7em;
	filter: drop-shadow(4px 4px 4px #0006);
	z-index: 1;
}

.popover-reference {
	position: relative;
}

.grayed-out {
	color: var(--color-grey);
}

.bold {
	font-weight: bold;
}

label[for='srcLang'],
label[for='trgLang'] {
	display: inline-block;
}

.arrow {
	color: #ccc;
}

.popover ol {
	margin-block-start: 1em;
	margin-block-end: 1em;
}

/* external links */
a[href^='http']:not([href^='%ROOT_URL%'])::after {
	margin: 0 0 0 0.2em;
	content: '';
	opacity: 0.7;
	padding: 0 0.34em;
	mask-size: 0.7em;
	background-color: var(--color-primary);
	mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="100px" width="100px" fill="%23000" viewBox="0 0 82 81" version="1.1" x="0px" y="0px"><title>Group</title><desc>Created with Sketch.</desc><g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><g transform="translate(0.000000, -17.000000)"><path d="M65.0787075,33.0882353 L33.4558824,64.3382354" stroke="%23000" stroke-width="15" stroke-linecap="square"></path><polygon fill="%23000" transform="translate(72.134903, 29.456845) rotate(53.000000) translate(-72.134903, -29.456845) " points="68.5556866 14.7245467 97.9172862 36.850099 46.3525203 44.1891435"></polygon><polygon fill="%23000" points="48.5294118 28.6764706 0 28.6764706 0 97.7941176 69.1176471 97.7941176 69.1176471 50 58.0882353 61.0294118 58.0882353 86.7647059 11.0294118 86.7647059 11.0294118 39.7058824 37.5 39.7058824"></polygon></g></g></svg>');
	mask-repeat: no-repeat;
	mask-position: 0 0.25em;
}

.footer-text {
	color: var(--color-grey);
	text-align: center;
	margin-block: var(--footer-padding);
}

@media screen and (max-width: 50rem) {
	:root {
		--footer-padding: 2rem;
	}
}

/* sticky footer */

.full-page {
	display: flex;
	flex-direction: column;
	min-height: 100vh;
}

main.container {
	flex: 1 0 auto;
}

footer.container {
	flex-shrink: 0;
}

/* /sticky footer */

abbr[title] {
	border-block-end: 1px dashed tomato;
    text-decoration: none;
	cursor: help;
}

